<resources>
    <string name="app_name">Implicit_Intent</string>
    <string name="edittext_url">http://developer.android.com</string>
    <string name="button_url">Open Website</string>

    <string name="edittext_loc">Marine Drive Mumbai</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">Android is a great thing to learn.</string>
    <string name="button_share">Share This Text</string>
</resources>
